--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,6 +70,8 @@ jobs:
           set -e
           echo "::group::Cleaning Disk Space"
           df -h
+          
+          # Remove massive pre-installed packages to free space
           sudo rm -rf /opt/hostedtoolcache
           sudo rm -rf /usr/local/lib/android
           sudo rm -rf /usr/share/dotnet
@@ -79,12 +81,22 @@ jobs:
           sudo rm -rf /usr/local/lib/node_modules
           sudo rm -rf /usr/lib/google-cloud-sdk
           sudo rm -rf /usr/lib/jvm
+          
+          # Clean Docker and APT
           sudo docker system prune -a -f
           sudo apt-get clean
           sudo apt-get autoremove -y
           sudo rm -rf /var/lib/apt/lists/*
+          
+          # Check space (Threshold 30GB)
           AVAILABLE=$(df -BG / | awk 'NR==2 {print $4}' | sed 's/G//')
-          if [ "$AVAILABLE" -lt 30 ]; then echo "::error::Space < 30GB"; exit 1; fi
+          echo "Free Space: ${AVAILABLE}GB"
+          if [ "$AVAILABLE" -lt 30 ]; then
+            echo "::error::Not enough disk space (<30GB). Setup failed."
+            exit 1
+          fi
+          
+          # Setup Swap (12GB) - Using DD for stability
           sudo swapoff -a
           sudo rm -f /swapfile
           sudo dd if=/dev/zero of=/swapfile bs=1M count=12288 status=progress
@@ -93,34 +105,59 @@ jobs:
           sudo swapon /swapfile
           echo "::endgroup::"
 
-      - name: 2. Install Tools
+      - name: 2. Install Tools & Dependencies
         run: |
           set -e
+          echo "::group::Installing Packages"
           sudo apt-get update
-          sudo apt-get install -y git wget curl python3 python3-pip zip unzip tar 7zip \
-            brotli lz4 openjdk-17-jdk liblz4-tool e2fsprogs device-tree-compiler \
-            build-essential zlib1g-dev erofs-utils
+          
+          # Install deps including zlib for compiling simg2img and erofs-utils
+          sudo apt-get install -y \
+            git wget curl python3 python3-pip zip unzip tar 7zip \
+            brotli lz4 openjdk-17-jdk \
+            liblz4-tool e2fsprogs device-tree-compiler build-essential zlib1g-dev \
+            erofs-utils
+          
+          # Install Python protobuf
           pip3 install --upgrade pip protobuf
+          
+          # Setup Repo tool
           mkdir -p ~/bin
           curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
           chmod a+x ~/bin/repo
           export PATH=~/bin:$PATH
+          
+          # MANUAL INSTALL OF BINARIES
+          echo "Setting up Android Image Tools..."
+          
           mkdir -p tools
           cd tools
+          
+          # 1. Payload Dumper Go
           wget -q https://github.com/ssut/payload-dumper-go/releases/download/1.2.2/payload-dumper-go_1.2.2_linux_amd64.tar.gz
           tar -zxf payload-dumper-go_1.2.2_linux_amd64.tar.gz
           find . -type f -name "payload-dumper-go" -exec chmod +x {} \;
           find . -type f -name "payload-dumper-go" -exec mv {} . \; || true
+          
+          # 2. Compile simg2img / img2simg
           git clone https://github.com/anestisb/android-simg2img
           cd android-simg2img
           make
           sudo cp simg2img /usr/local/bin/
           sudo cp img2simg /usr/local/bin/
           cd ..
+          rm -rf android-simg2img
+          
+          # 3. Apktool
           wget -q https://bitbucket.org/iBotPeaches/apktool/downloads/apktool_2.9.1.jar -O apktool.jar
-          echo '#!/bin/bash' > apktool && echo 'java -jar $(dirname $0)/apktool.jar "$@"' >> apktool && chmod +x apktool
+          echo '#!/bin/bash' > apktool
+          echo 'java -jar $(dirname $0)/apktool.jar "$@"' >> apktool
+          chmod +x apktool
+          
+          # 4. Baksmali/Smali
           wget -q https://bitbucket.org/JesusFreke/smali/downloads/baksmali-2.5.2.jar -O baksmali.jar
           wget -q https://bitbucket.org/JesusFreke/smali/downloads/smali-2.5.2.jar -O smali.jar
+          echo "::endgroup::"
 
       - name: 3. Download & Extract Firmware
         working-directory: ./
@@ -129,127 +166,129 @@ jobs:
           mkdir -p build/input
           mkdir -p build/output
           cd build/input
-          echo "Downloading..."
+          
+          echo "Downloading Firmware..."
           wget "${{ inputs.source_url }}" -O firmware.zip
+          
+          echo "Extracting..."
           7z l firmware.zip > content.txt
           mkdir -p raw_images
+          
           if grep -q "payload.bin" content.txt; then
+            echo "Format: Payload.bin"
             unzip firmware.zip payload.bin
             PD_TOOL="../../tools/payload-dumper-go"
             [ ! -f "$PD_TOOL" ] && PD_TOOL=$(find ../../tools -name payload-dumper-go -type f | head -n 1)
             "$PD_TOOL" -o raw_images -p system,system_ext,product,vendor,odm payload.bin
           elif grep -q "super.img" content.txt; then
+            echo "Format: Super.img"
             unzip firmware.zip super.img
             simg2img super.img super.raw
+            echo "::warning::Super.img extraction assumes flat image."
           else
+            echo "Format: Standard Images"
             unzip firmware.zip "*.img" -d raw_images
           fi
+          
+          # Ensure images are raw
           cd raw_images
           for img in *.img; do
             if [ -f "$img" ]; then
-                if file "$img" | grep -q "sparse"; then simg2img "$img" "${img%.*}.raw"; mv "${img%.*}.raw" "$img"; fi
+                if file "$img" | grep -q "sparse"; then
+                  simg2img "$img" "${img%.*}.raw"
+                  mv "${img%.*}.raw" "$img"
+                fi
             fi
           done
 
-      - name: 4. Clone Trees
+      - name: 4. Download Device Trees
         working-directory: ./build
         run: |
           set -e
+          echo "Cloning Miatoll Source..."
           git clone "${{ inputs.device_tree_url }}" device/xiaomi/miatoll
           git clone "${{ inputs.vendor_tree_url }}" vendor/xiaomi/miatoll
           git clone "${{ inputs.kernel_tree_url }}" kernel/xiaomi/miatoll
 
-      - name: 5. Prepare Images (Controlled Python Copy)
+      - name: 5. Prepare Images (Final Xargs Batch Method)
         working-directory: ./build
         run: |
           set -e
           echo "::group::Preparing Images"
           
-          # Create robust Python copy script
-          cat << 'EOF' > safe_copy.py
-          import os
-          import subprocess
-          import sys
-
-          src_root = sys.argv[1]
-          dst_root = sys.argv[2]
-          byte_counter = 0
-          # Sync every 50MB
-          SYNC_LIMIT = 50 * 1024 * 1024 
-
-          print(f"Python Copy: {src_root} -> {dst_root}")
-
-          for root, dirs, files in os.walk(src_root):
-              rel_path = os.path.relpath(root, src_root)
-              dest_dir = os.path.join(dst_root, rel_path)
-              if not os.path.exists(dest_dir):
-                  os.makedirs(dest_dir, exist_ok=True)
-
-              for name in files:
-                  s = os.path.join(root, name)
-                  d = os.path.join(dest_dir, name)
-                  
-                  # Skip symlinks for size check, but copy them
-                  if not os.path.islink(s):
-                      byte_counter += os.path.getsize(s)
-                  
-                  # cp -a preserves everything (links, contexts)
-                  subprocess.run(["cp", "-a", s, d], check=True)
-                  
-                  if byte_counter >= SYNC_LIMIT:
-                      subprocess.run(["sync"])
-                      byte_counter = 0
-
-          subprocess.run(["sync"])
-          print("Copy finished successfully.")
-          EOF
-
           mkdir -p port_rom/system port_rom/system_ext port_rom/product port_rom/vendor
           mkdir -p temp_mount_src
           
           process_partition() {
             PART=$1
-            IMG_PATH="$(pwd)/input/raw_images/$PART.img"
-            MNT_PATH="$(pwd)/port_rom/$PART"
+            # Use Absolute Paths to avoid any confusion in xargs/cp
+            IMG="$(pwd)/input/raw_images/$PART.img"
+            MNT="$(pwd)/port_rom/$PART"
             SRC_MNT="$(pwd)/temp_mount_src"
             
-            if [ -f "$IMG_PATH" ]; then
+            if [ -f "$IMG" ]; then
               echo "Processing $PART..."
-              FS_TYPE=$(file -bL "$IMG_PATH" | awk '{print $1}')
+              FS_TYPE=$(file -bL "$IMG" | awk '{print $1}')
               
               if [[ "$FS_TYPE" == "EROFS" ]] || [[ "$FS_TYPE" == "Linux" ]]; then
-                 echo "EROFS detected. Converting..."
+                 echo "EROFS detected. Converting to EXT4..."
                  
-                 # Calc size: Original * 3 + 2GB (Safe buffer for extraction)
-                 ORIG_SIZE=$(stat -c%s "$IMG_PATH")
-                 NEW_SIZE=$(($ORIG_SIZE * 3 + 2147483648))
+                 # 1. Create Target EXT4 Image (Original Size * 4 for Dynamic Partition safety)
+                 ORIG_SIZE=$(stat -c%s "$IMG")
+                 NEW_SIZE=$(($ORIG_SIZE * 4)) 
+                 # Ensure at least 3GB buffer
+                 [ "$NEW_SIZE" -lt 3221225472 ] && NEW_SIZE=3221225472
                  
+                 echo "Allocating: $NEW_SIZE bytes"
                  dd if=/dev/zero of="${PART}_ext4.img" bs=1 count=0 seek=$NEW_SIZE
                  mkfs.ext4 -F "${PART}_ext4.img"
                  
-                 sudo mount -o loop,ro "$IMG_PATH" "$SRC_MNT"
-                 sudo mount -o loop,rw "${PART}_ext4.img" "$MNT_PATH"
+                 # 2. Mount
+                 sudo mount -o loop,ro "$IMG" "$SRC_MNT"
+                 sudo mount -o loop,rw "${PART}_ext4.img" "$MNT"
                  
-                 echo "Running Python Copy..."
-                 sudo python3 safe_copy.py "$SRC_MNT" "$MNT_PATH"
+                 # 4. ROBUST BATCH COPY (XARGS)
+                 # This avoids OOM (no python loop overhead) and handles paths correctly
+                 echo "Starting Batch Copy..."
+                 cd "$SRC_MNT"
                  
+                 # A. Replicate Directories first
+                 echo "--> Directories..."
+                 sudo find . -type d -exec mkdir -p "$MNT/{}" \;
+                 
+                 # B. Files in Batches of 256
+                 # We pass MNT as argument $1 to sh -c to handle path safely
+                 echo "--> Files..."
+                 sudo find . -type f -o -type l -print0 | xargs -0 -n 256 -P 1 sh -c 'cp -a --parents -t "$1" "$@" && sync' _ "$MNT"
+                 
+                 cd ../..
+                 
+                 # 5. Cleanup
                  sudo umount "$SRC_MNT"
-                 sudo umount "$MNT_PATH"
+                 sudo umount "$MNT"
                  
-                 rm "$IMG_PATH"
-                 mv "${PART}_ext4.img" "$IMG_PATH"
-                 sudo mount -o loop,rw "$IMG_PATH" "$MNT_PATH"
+                 # 6. Swap
+                 rm "$IMG"
+                 mv "${PART}_ext4.img" "$IMG"
+                 
+                 # 7. Remount
+                 sudo mount -o loop,rw "$IMG" "$MNT"
+                 
               else
                  echo "EXT4 detected. Resizing..."
-                 dd if=/dev/zero bs=1M count=2048 >> "$IMG_PATH"
-                 e2fsck -f -y "$IMG_PATH" || true
-                 resize2fs "$IMG_PATH"
-                 sudo mount -o loop,rw "$IMG_PATH" "$MNT_PATH"
+                 dd if=/dev/zero bs=1M count=2048 >> "$IMG"
+                 e2fsck -f -y "$IMG" || true
+                 resize2fs "$IMG"
+                 sudo mount -o loop,rw "$IMG" "$MNT"
               fi
               
-              # Sanity Check
-              USED=$(sudo du -s "$MNT_PATH" | awk '{print $1}')
-              if [ "$USED" -lt 1000 ]; then echo "::error::Empty partition $PART"; exit 1; fi
+              # Verification
+              USED_SPACE=$(sudo du -s "$MNT" | awk '{print $1}')
+              echo "Partition $PART usage: $USED_SPACE blocks"
+              if [ "$USED_SPACE" -lt 1000 ]; then
+                 echo "::error::Partition $PART is empty! Copy failed."
+                 exit 1
+              fi
             fi
           }
           
@@ -258,92 +297,139 @@ jobs:
           process_partition product
           process_partition vendor
           
-          rm -rf temp_mount_src safe_copy.py
+          rm -rf temp_mount_src
+          
+          echo "Images mounted RW."
           echo "::endgroup::"
 
-      - name: 6. Debloat
+      - name: 6. Debloat System
         working-directory: ./build/port_rom
         run: |
           set -e
-          APPS="
-          system/app/AnalyticsCore system/app/FacebookAppManager system/app/FacebookServices
-          system/priv-app/AmazonShopping system/priv-app/NetflixStub
-          product/app/YouTube product/app/YouTubeMusic product/app/Duo product/app/Gmail2
+          echo "::group::Debloating"
+          # Operations happen directly on the mounted image using SUDO
+          APPS_TO_REMOVE="
+          system/app/AnalyticsCore
+          system/app/FacebookAppManager
+          system/app/FacebookServices
+          system/priv-app/AmazonShopping
+          system/priv-app/NetflixStub
+          product/app/YouTube
+          product/app/YouTubeMusic
+          product/app/Duo
+          product/app/Gmail2
           system_ext/app/CarrierServices
           "
-          for APP in $APPS; do
-             if sudo test -d "$APP"; then sudo rm -rf "$APP"; fi
+          
+          for APP in $APPS_TO_REMOVE; do
+             if sudo test -d "$APP"; then
+               echo "Removing $APP"
+               sudo rm -rf "$APP"
+             fi
           done
+          echo "::endgroup::"
 
-      - name: 7. Miatoll Patching
+      - name: 7. Apply Miatoll Adaptations
         working-directory: ./build
         run: |
           set -e
+          echo "::group::Adapting for Miatoll"
+          
           PORT="port_rom"
           DT="device/xiaomi/miatoll"
+          
+          # 1. Install Overlays (Sudo)
           sudo mkdir -p $PORT/product/overlay
           [ -d "$DT/overlay" ] && sudo cp -r "$DT/overlay/"* $PORT/product/overlay/
+          
+          # 2. Patch build.prop (Sudo Find & Sed)
+          echo "Patching props..."
           sudo find $PORT -name "build.prop" | while read prop; do
+            echo "Patching $prop"
             sudo sed -i 's/^ro.product.device=.*/ro.product.device=miatoll/' "$prop"
             sudo sed -i 's/^ro.product.board=.*/ro.product.board=sm6250/' "$prop"
             sudo sed -i 's/^ro.adb.secure=.*/ro.adb.secure=0/' "$prop"
           done
+          
+          # 3. Audio Configs (Sudo)
           if sudo test -d "$PORT/vendor/etc"; then
             [ -f "$DT/audio/audio_policy_configuration.xml" ] && sudo cp "$DT/audio/audio_policy_configuration.xml" "$PORT/vendor/etc/"
           fi
+          
+          echo "::endgroup::"
 
-      - name: 8. Smali Patching
+      - name: 8. Smali Patching (Services.jar)
         working-directory: ./build
         run: |
           set -e
+          echo "::group::Smali Patching"
           TOOLS="../tools"
+          
+          # Find services.jar recursively via sudo
           JAR_PATH=$(sudo find port_rom -name "services.jar" | grep "framework" | head -n 1)
+          
           if [ ! -z "$JAR_PATH" ]; then
-            sudo cp "$JAR_PATH" services.jar && sudo chmod 666 services.jar
+            echo "Found services.jar at: $JAR_PATH"
+            sudo cp "$JAR_PATH" services.jar
+            sudo chmod 666 services.jar
             java -jar $TOOLS/baksmali.jar d services.jar -o services_out
-            # Optional patch logic here
             java -jar $TOOLS/smali.jar a services_out -o classes.dex
             zip -u services.jar classes.dex
             sudo cp services.jar "$JAR_PATH"
             rm -rf services_out classes.dex services.jar
           fi
+          echo "::endgroup::"
 
-      - name: 9. Finalize Images
+      - name: 9. Build Final Images
         working-directory: ./build
         run: |
           set -e
+          echo "::group::Building Images"
+          # Output dir local to build folder
           OUT_DIR="output"
           mkdir -p $OUT_DIR
           sudo chmod 777 $OUT_DIR
           
-          finalize() {
+          finalize_image() {
             PART=$1
-            MNT="$(pwd)/port_rom/$PART"
-            IMG="$(pwd)/input/raw_images/$PART.img"
+            MNT="port_rom/$PART"
+            IMG="input/raw_images/$PART.img"
+            
             if [ -d "$MNT" ] && [ -f "$IMG" ]; then
+               echo "Finalizing $PART..."
                sudo umount "$MNT"
+               # Shrink to minimum size
                sudo e2fsck -f -y "$IMG" || true
                sudo resize2fs -M "$IMG"
+               # Convert to sparse
+               echo "Converting to sparse..."
                sudo img2simg "$IMG" "$OUT_DIR/$PART.img"
             fi
           }
-          finalize system
-          finalize system_ext
-          finalize product
-          finalize vendor
+          
+          finalize_image system
+          finalize_image system_ext
+          finalize_image product
+          finalize_image vendor
+          
+          echo "::endgroup::"
 
-      - name: 10. Artifacts
+      - name: 10. Create Output Artifact
         working-directory: ./build/output
         run: |
           set -e
+          echo "Fixing permissions..."
           sudo chown -R $USER:$USER .
+          ls -lh
+          
           if [ "${{ inputs.output_format }}" == "recovery_zip" ]; then
+            echo "Zipping images..."
             zip -r miatoll_port.zip *.img
             rm *.img
           fi
 
-      - name: 11. Upload
+      - name: 11. Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Miatoll_Port
+          name: Miatoll_Port_${{ inputs.rom_type }}_${{ inputs.android_version }}
           path: build/output/*
