--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -133,13 +133,14 @@ jobs:
           mkdir -p tools
           cd tools
           
-          # 1. Payload Dumper Go
+          # 1. Payload Dumper Go (Safe Extract)
           wget -q https://github.com/ssut/payload-dumper-go/releases/download/1.2.2/payload-dumper-go_1.2.2_linux_amd64.tar.gz
           tar -zxf payload-dumper-go_1.2.2_linux_amd64.tar.gz
           find . -type f -name "payload-dumper-go" -exec chmod +x {} \;
           find . -type f -name "payload-dumper-go" -exec mv {} . \; || true
           
-          # 2. Compile simg2img / img2simg
+          # 2. Compile simg2img / img2simg (Most robust method)
+          echo "Compiling simg2img/img2simg from source..."
           git clone https://github.com/anestisb/android-simg2img
           cd android-simg2img
           make
@@ -210,7 +211,7 @@ jobs:
           git clone "${{ inputs.vendor_tree_url }}" vendor/xiaomi/miatoll
           git clone "${{ inputs.kernel_tree_url }}" kernel/xiaomi/miatoll
 
-      - name: 5. Prepare Images (Final Xargs with Sudo)
+      - name: 5. Prepare Images (Final Fix: Xargs Shift)
         working-directory: ./build
         run: |
           set -e
@@ -221,7 +222,7 @@ jobs:
           
           process_partition() {
             PART=$1
-            # Using absolute paths to prevent any ambiguity with sudo/subshells
+            # Using absolute paths
             IMG="$(pwd)/input/raw_images/$PART.img"
             MNT="$(pwd)/port_rom/$PART"
             SRC_MNT="$(pwd)/temp_mount_src"
@@ -239,7 +240,6 @@ jobs:
                  # Ensure at least 3GB buffer
                  [ "$NEW_SIZE" -lt 3221225472 ] && NEW_SIZE=3221225472
                  
-                 echo "Allocating: $NEW_SIZE bytes"
                  dd if=/dev/zero of="${PART}_ext4.img" bs=1 count=0 seek=$NEW_SIZE
                  mkfs.ext4 -F "${PART}_ext4.img"
                  
@@ -247,18 +247,18 @@ jobs:
                  sudo mount -o loop,ro "$IMG" "$SRC_MNT"
                  sudo mount -o loop,rw "${PART}_ext4.img" "$MNT"
                  
-                 # 4. ROBUST BATCH COPY (SUDO XARGS FIX)
+                 # 4. ROBUST BATCH COPY (FIXED LOGIC)
                  echo "Starting Batch Copy..."
                  cd "$SRC_MNT"
                  
-                 # A. Replicate Directories first (sudo xargs ensures root permissions)
+                 # A. Replicate Directories first
                  echo "--> Directories..."
                  sudo find . -type d -print0 | sudo xargs -0 -I {} mkdir -p "$MNT/{}"
                  
-                 # B. Files in Batches of 256 (sudo xargs to run cp as root)
-                 # $1 inside sh -c receives the value of $MNT
+                 # B. Files in Batches of 256
+                 # FIX: Using 'shift' to correctly separate target arg from file list
                  echo "--> Files..."
-                 sudo find . -type f -o -type l -print0 | sudo xargs -0 -n 256 -P 1 sh -c 'cp -a --parents -t "$1" "$@" && sync' _ "$MNT"
+                 sudo find . -type f -o -type l -print0 | sudo xargs -0 -n 256 -P 1 sh -c 'TARGET="$1"; shift; cp -a --parents -t "$TARGET" "$@" && sync' -- "$MNT"
                  
                  cd ../..
                  
